tests/snapshots/run_wpt_conformance__trtx_identity_float16_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "identity.https.any.js",
    "identity float16 1D tensor",
    "trtx",
    "PASS",
)
