tests/snapshots/run_wpt_conformance__trtx_identity_float32_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "identity.https.any.js",
    "identity float32 1D constant tensor",
    "trtx",
    "PASS",
)
